--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
     <string name="action_settings">Settings</string>
     <string name="WriteButton">Write file</string>
     <string name="ReadButton">Read File</string>
+    <string name="ButtonOk">Ok</string>
+    <string name="ButtonCancel">Cancel</string>
+    <string name="HintName">Enter point name</string>
+    <string name="checkWifiEnable">Enable Wi-Fi</string>
 </resources>
